# gh-labels-cli

./: .gitignore  Cargo.toml  changelog.md  flake.nix  readme.md  shell.nix
.github/workflows/: cd.yml  ci.yml
src/: config.rs  error.rs  file.rs  main.rs  util.rs
src/cli/: config.rs  integration.rs  mod.rs
src/cli/api/: create.rs  delete.rs  export.rs  mod.rs  update.rs
src/extension/: mod.rs
src/extension/hubcaps_error/: label_already_exists.rs  mod.rs  repo_not_found.rs  unauthorized.rs
